<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="40dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:textSize="20sp"
            android:textColor="#000"
            android:text="@string/authentication_mode" />

        <RadioGroup
            android:id="@+id/radioAuthentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true">

            <RadioButton
                android:id="@+id/radioDemographic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_demographic"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_fingerprint" />

        </RadioGroup>

        <ImageView
            android:id="@+id/barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/barcode_image"
            android:onClick="scanUsingQRCode"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/qrcode_gray" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/aadhaar_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Aadhaar ID"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="14"
                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="text"
                android:singleLine="true"
                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>

    <Button
        android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_overlay"
        android:onClick="authenticate"
        android:text="@string/authenticate"
        android:textColor="#fff" />

</RelativeLayout>